--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "git add . && git commit -m \"commit\" && git push -u origin master && npm run build && cd dist && git add . && git commit -m \"commit\" && git push -u origin master"
   },
 
   "dependencies": {
